--- a/css/index.css
+++ b/css/index.css
@@ -90,6 +90,7 @@ body #game .pacDot.energizer span {
 body #game .pacman {
   background-color: yellow;
   border-radius: 15px 15px;
+  z-index: 2;
 }
 body #game .pacman.EAST {
   transform: rotateZ(0deg);
@@ -107,6 +108,10 @@ body #game .pacman span {
   clip-path: polygon(110% 100%, 40% 50%, 110% 0%);
   background: black;
   animation: pacmanEat 0.15s linear infinite alternate-reverse;
+}
+body #game .ghost {
+  background-color: red;
+  z-index: 1;
 }
 
 /*# sourceMappingURL=index.css.map */
