--- a/sass/index.sass
+++ b/sass/index.sass
@@ -86,6 +86,7 @@ body
         .pacman
             background-color: yellow
             border-radius: 15px 15px
+            z-index: 2
 
             &.EAST
                 transform: rotateZ(0deg)
@@ -103,4 +104,9 @@ body
                 clip-path: polygon(110% 100%, 40% 50%, 110% 0%)
                 background: black
                 animation: pacmanEat 0.15s linear infinite alternate-reverse
+        
+        .ghost
+            background-color: red
+            z-index: 1
+
     
