--- a/sass/index.sass
+++ b/sass/index.sass
@@ -109,4 +109,15 @@ body
             background-color: red
             z-index: 1
 
+    footer
+        display: flex
+        align-items: center
+        justify-content: flex-start
+
+        .live
+            background-color: green
+            height: 15px
+            width: 15px
+            border-radius: 15px
+
     
