--- a/sass/index.sass
+++ b/sass/index.sass
@@ -109,6 +109,19 @@ body
             background-color: red
             z-index: 1
 
+        input#Start
+            background-color: black
+            color: white
+            top: 40%
+            left: 40%
+            height: 20%
+            width: 20%
+            position: absolute
+            border: solid white 1px
+
+            &:hover
+                cursor: pointer
+
     footer
         display: flex
         align-items: center
@@ -119,5 +132,3 @@ body
             height: 15px
             width: 15px
             border-radius: 15px
-
-    
