--- a/sass/index.sass
+++ b/sass/index.sass
@@ -88,9 +88,44 @@ body
             border-radius: 15px 15px
             z-index: 2
 
+            &.EAST
+                transform: rotateZ(0deg)
+
+            &.SOUTH
+                transform: rotateZ(90deg)
+
+            &.WEST
+                transform: rotateZ(180deg)
+
+            &.NORTH
+                transform: rotateZ(-90deg)
+
+            span
+                clip-path: polygon(110% 100%, 40% 50%, 110% 0%)
+                background: black
+
         .ghost
-            background-color: red
             z-index: 1
+
+            span
+                background-color: black
+                height: 20%
+                width: 50%
+                position: absolute
+                bottom: 0
+                left: 25%
+
+        #ghost0
+            background-color: red
+
+        #ghost1
+            background-color: orange
+
+        #ghost2
+            background-color: pink
+
+        #ghost3
+            background-color: lightblue
 
         input#Start
             background-color: black
