--- a/sass/index.sass
+++ b/sass/index.sass
@@ -140,6 +140,30 @@ body
             &:hover
                 cursor: pointer
 
+        #restart
+            position: absolute
+            height: 40%
+            width: 60%
+            top: 30%
+            left: 20%
+            background-color: black
+            z-index: 15
+            display: flex
+            justify-content: space-around
+            align-items: center
+            flex-direction: column
+
+            *
+                position: relative
+                width: 90%
+                height: 20%
+                text-align: center
+
+            input:hover
+                background-color: red
+                color: white
+
+
     footer
         display: flex
         align-items: center
