--- a/sass/index.sass
+++ b/sass/index.sass
@@ -152,6 +152,7 @@ body
             justify-content: space-around
             align-items: center
             flex-direction: column
+            border: solid white 1px
 
             *
                 position: relative
