--- a/css/index.css
+++ b/css/index.css
@@ -156,6 +156,7 @@ body #game #restart {
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  border: solid white 1px;
 }
 body #game #restart * {
   position: relative;
