interro - super gomme : fin

--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,14 @@
     opacity: 0;
   }
 }
+@keyframes gradientColor {
+  0% {
+    background-position: 0% 0%;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
 * {
   font-family: "DogicaPixelRegular";
   font-weight: bolder;
@@ -107,6 +115,11 @@ body #game .pacman.NORTH {
 body #game .pacman span {
   clip-path: polygon(110% 100%, 40% 50%, 110% 0%);
   background: black;
+}
+body #game .pacman.Energized {
+  background: linear-gradient(yellow, orange, green, lightblue);
+  animation: gradientColor linear 0.5s infinite;
+  background-size: 200% 200%;
 }
 body #game .ghost {
   z-index: 1;
